--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mi página</title>
   </head>
   <body>
+    <header>Esto es la cabecera</header>
     <h1>Hola Mundo, este es mi primer repositorio</h1>
   </body>
 </html>
